k8s/base/api-gateway/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: api-gateway
  labels:
    app: api-gateway
    app.kubernetes.io/name: api-gateway
    app.kubernetes.io/part-of: sstore

spec:
  replicas: 1

  selector:
    matchLabels:
      app: api-gateway

  template:
    metadata:
      labels:
        app: api-gateway
        app.kubernetes.io/name: api-gateway
        app.kubernetes.io/part-of: sstore

    spec:
      containers:
        - name: api-gateway

          image: mayurb123/sstore:api-gateway

          imagePullPolicy: IfNotPresent

          ports:
            - name: http
              containerPort: 9090

          resources:
            requests:
              cpu: 250m
              memory: 512Mi

            limits:
              cpu: "1"
              memory: 1Gi

          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: http
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 6

          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: http
            initialDelaySeconds: 40
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 3
