k8s/base/api-gateway/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: api-gateway
  labels:
    app: api-gateway
    app.kubernetes.io/part-of: sstore

spec:
  type: ClusterIP

  selector:
    app: api-gateway

  ports:
    - name: http
      port: 9090
      targetPort: http
