k8s/base/api-gateway/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway
  namespace: dev
  labels:
    app: api-gateway
    app.kubernetes.io/part-of: sstore

spec:
  ingressClassName: nginx

  tls:
    - hosts:
        - api.sstore.local
      secretName: sstore-tls

  rules:
    - host: api.sstore.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 9090
